# my-rpi5-discord-bot

./: Dockerfile  database.py  docker-compose-ci.yml  docker-compose-pi.yml  docker-compose.yml  pyproject.toml  setup.sh
.github/workflows/: docker-build.yml  docker-deploy.yml
cogs/mygo/: utils.py
cogs/pi/: const.py  utils.py
