[project]
name = "my-rpi5-discord-bot"
version = "0.0.0"
description = ""
authors = [{ name = "c8763yee", email = "rrrrr4413@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "tqdm>=4.66.5",
    "requests>=2.32.3",
    "aiohttp>=3.10.5",
    "aiomqtt>=2.3.0",
    "openai>=1.41.1",
    "paho-mqtt>=2.1.0",
    "pynacl>=1.5.0",
    "python-dotenv>=1.0.1",
    "discord-py[voice]>=2.4.0",
    "psutil>=7.0.0",
    "aiosqlite>=0.21.0",
    "ffmpeg-python>=0.2.0",
    "sqlmodel>=0.0.24",
    "aiomysql>=0.2.0",
]

[tool.black]
line-length = 100

[dependency-groups]
dev = [
    "pylint>=3.3.7",
    "ruff>=0.11.11",
    "pre-commit>=4.2.0",
    "ipython>=9.2.0",
    "pylint-pydantic>=0.3.2",
    "pytest>=8.3.2",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
]

[tool.isort]
profile = "ruff"
line_length = 100

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report html"
